tests/output/self_hosted/double_comma_error.txt
tests/double_comma_error.oomph:2: error: should be an expression

    print("foo",,)
                ^

assert() failed in "self_hosted/error.oomph", line N
